src/test/resources/Parser/SyntaxErrors/TwiceDefinedLocalVariable.front
class A {

    void test(int i) {
        int32 i = 0;
    }

}